[tool.poetry]
name = "cagdump"
version = "0.1.0"
description = ""
authors = ["Barichello <artur@barichello.me>"]

[tool.poetry.dependencies]
python = "^3.10"
cagrex = {git = "https://github.com/caravelahc/cagrex/"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
